tests/paczka1/fuzzy1/93323005.err
Error in line 2: 7aSo A922 8,3
Error in line 12: 58pKvem3 S60 94,4
Error in line 18: kFm9 S281 50,3
Error in line 20: YDdX7I2I A870 23,5
Error in line 27: jhTfUYBA S281 83,9
Error in line 26: kFm9 A870 51,8
Error in line 31: kFm9 S60 44,6
Error in line 28: YDdX7I2I S281 90,6
Error in line 36: Q4w6IYwS11 A870 38,2
